--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
 <html lang="en-US">
 <!--<![endif]-->
 <head>
+<!-- Google Analytics Code -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-81301723-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+<!-- Google Analytics Code End-->
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta charset="utf-8">
 <title>Siddhi Vinayak Arts, Pune | Artist Vinayak Kumbhar | Ganesh Murti Maker Pune </title>
@@ -25,17 +37,6 @@
 <link rel="stylesheet" id="switch_style" href="#" type='text/css' media='all'>
 <link rel="stylesheet" href="css/style-switch.css" type="text/css">
 <link rel='stylesheet' href='js/prettyphoto/css/prettyPhoto.css' type='text/css' media='all'/>
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-67028225-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
 </head>
 <body oncontextmenu="return false" class="home blog">
 <header id="intro" class="parallax parallax_height">
