--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <meta name="keywords" content="siddhi vinayak arts sadadhiv peth,vinayak kumbhar pune,kumbhar wada,murti,idol,ganesh,siddhi vinayak arts pune,ganpati murti,ganesh idol makers in pune,diwali killa,diwali fort,gauri ganpati,ganesh murti,ganesh idol,devi,shivaji maharaj, murti painting, idol painting, murti maker">
 </head>
 <!--[if lt IE 9]> <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,600,700,800' rel='stylesheet' type='text/css'/>
+<link href='//fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,600,700,800' rel='stylesheet' type='text/css'/>
 <link rel="shortcut icon" href="images/favicon1.ico" type="image/x-icon">
 <link rel="icon" href="images/favicon1.ico" type="image/x-icon">
 <link rel='stylesheet' href='css/bootstrap.css' type='text/css' media='all'/>
@@ -576,8 +576,8 @@
       <div class="row">
         <div class="span7">
           <div id="contact-container" class="clearfix">
-          <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-          <div style="overflow:hidden;height:auto;width:100%;color:#000; border:5px solid #fff;"><div id="gmap_canvas" style="height:450px;width:750px;"></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style><a class="google-map-code" href="http://www.themecircle.net/newart/" id="get-map-data">Vinayak Kumbhar</a></div><script type="text/javascript"> function init_map(){var myOptions = {zoom:17,center:new google.maps.LatLng(18.511389116830568,73.84298165106509),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(18.511389116830568, 73.84298165106509)});infowindow = new google.maps.InfoWindow({content:"<b>Vinayak Kumbhar</b><br/>15 Sadashiv Peth, Near Puna Hospital<br/>411030 Pune. Mobile: 9881100831" });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
+          <script type="text/javascript" src="//maps.google.com/maps/api/js?sensor=false"></script>
+          <div style="overflow:hidden;height:auto;width:100%;color:#000; border:5px solid #fff;"><div id="gmap_canvas" style="height:450px;width:750px;"></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style><a class="google-map-code" href="//www.themecircle.net/newart/" id="get-map-data">Vinayak Kumbhar</a></div><script type="text/javascript"> function init_map(){var myOptions = {zoom:17,center:new google.maps.LatLng(18.511389116830568,73.84298165106509),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(18.511389116830568, 73.84298165106509)});infowindow = new google.maps.InfoWindow({content:"<b>Vinayak Kumbhar</b><br/>15 Sadashiv Peth, Near Puna Hospital<br/>411030 Pune. Mobile: 9881100831" });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
             <!--<form method="post" id="my-form" action='http://www.matchthemes.com/demohtml/atrium/include/contact-process.php'>
               <input type="text" name="author" class="comm-field" placeholder="Name" value="" size="22" tabindex="1" aria-required='true'/>
               <input type="text" name="email" class="comm-field" placeholder="Email" value="" size="22" tabindex="2" aria-required='true'/>
@@ -613,7 +613,7 @@
   <div class="container">
     <div class="row">
       <div class="span8 offset2">
-        <p class="alignc">&copy; 2015 <strong>Siddhi Vinayak Arts.</strong> All rights reserved. Created By <strong>Suhas Shirke.</strong> <div style="text-align:center;"><script type="text/javascript" src="http://services.webestools.com/cpt_pages_views/21950-21-9.js"></script></div></p>
+        <p class="alignc">&copy; 2015 <strong>Siddhi Vinayak Arts.</strong> All rights reserved. Created By <strong>Suhas Shirke.</strong> <div style="text-align:center;"><script type="text/javascript" src="//services.webestools.com/cpt_pages_views/21950-21-9.js"></script></div></p>
       </div>
     </div>
     <!--<div class="row">
@@ -649,7 +649,7 @@
 
 
 
-<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js'></script>
+<script type='text/javascript' src='//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js'></script>
 <script type='text/javascript' src='js/switcher.js'></script>
 <script type='text/javascript' src='js/bootstrap.min.js'></script>
 <script type='text/javascript' src='js/jquery.easing.min.js'></script>
