--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <title>Siddhi Vinayak Arts, Pune | Artist Vinayak Kumbhar | Ganesh Murti Maker Pune </title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Vinayak Kumbhar has been making Ganesha idols for decades. In the last 35 years he has made various types of Ganesh, Durga Devi, Shivaji Maharaj idols as per customer requirement.">
-<meta name="keywords" content="siddhi vinayak arts sadadhiv peth,vinayak kumbhar pune,kumbhar wada,murti,idol,ganesh,siddhi vinayak arts pune,ganpati murti,ganesh idol makers in pune,diwali killa,diwali fort,gauri ganpati,ganesh murti,ganesh idol,devi,shivaji maharaj, murti painting, idol painting, murti maker">
+<meta name="keywords" content="siddhi vinayak arts sadadhiv peth,vinayak kumbhar pune,kumbhar wada,murti,idol,ganesh,siddhi vinayak arts pune,ganpati murti,ganesh idol makers in pune,diwali killa,diwali fort,gauri ganpati,ganesh murti,ganesh idol,devi,shivaji maharaj, murti painting, idol painting, murti maker, ganesh murti online, ganesh murti making, 	ganesh murti stall, ganesh murti images, ganesh murti mould, ganesh murti artist, 	make a ganesh murti, making a ganesh murti, ganesh murti booking, ganesh murti buy online, ganesh murti booking online, ganesh ji, ganesh murti car, ganesh murti eco friendly, ganesha, ganesh murti for sale, 	ganesh murti for home, 	ganesh ji murti, ganesh ji ki murti, ganesh murti in pune, murti ganesh ji ki, गणेश जी murti, ganesh murti karkhana, गणेश के मूर्ति, ganesh murti latest, ganesh murti maker, ganesh murti near me, ganesh murti new, ganesh murti online pune, ganesh murti online booking, ganesh murti order online, p o p ganesh murti, ganesh murti shop, ganesh murti sale">
 </head>
 <!--[if lt IE 9]> <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
 <link href='//fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,600,700,800' rel='stylesheet' type='text/css'/>
@@ -593,13 +593,13 @@
             <h5 style="color:#ff7700;">Contact Details</h5>
           </header>
           <div class="margin-t">
-            <p><h4>Vinayak Kumbhar</h4></p>
+            <p><h4>Shriyash Kumbhar</h4></p>
             <div class="contact-address">
               <ul>
                 <li><strong>Address:</strong> 15, Sadashiv Peth,<br>
                  Bhosale Wada, Near Puna Hospital,<br>
  Pune - 411030</li>
-                <li><strong>Mobile:</strong> 9881100831</li>
+                <li><strong>Mobile:</strong> <a href="tel:7420841602">74208 41602</a></li>
                 
               </ul>
             </div>
