--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
                 <li><strong>Address:</strong> 15, Sadashiv Peth,<br>
                  Bhosale Wada, Near Puna Hospital,<br>
  Pune - 411030</li>
-                <li><strong>Mobile:</strong> <a href="tel:7420841602">74208 41602</a></li>
+                <li><strong>Mobile:</strong>74208 41602</li>
                 
               </ul>
             </div>
