--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
                 <li><strong>Address:</strong> 15, Sadashiv Peth,<br>
                  Bhosale Wada, Near Puna Hospital,<br>
  Pune - 411030</li>
-                <li><strong>Mobile:</strong>74208 41602</li>
+                <li><strong>Mobile:</strong> <h4>74208 41602</h4></li>
                 
               </ul>
             </div>
