--- a/index.html
+++ b/index.html
@@ -218,6 +218,15 @@
             </div>
           </div>
         </li>
+          <li class="portfolio-item creative ">
+          <div class="shot-wrap"><img width="400" height="300" src="images/ganesha/small/2021_1.jpg" alt="Ganpati Murti/Idol" title=""/>
+            <div class="shot-more">
+             <!-- <h4 class="shot-title">Weatherette</h4>
+              <span>Apps </span>-->
+              <div class="view-larger"><a class="btn-flat" href="images/ganesha/small/2021_1.jpg" data-rel="prettyPhoto[gallery]" title="">View Larger</a></div>
+            </div>
+          </div>
+        </li>
         <li class="portfolio-item creative ">
           <div class="shot-wrap"><img width="400" height="300" src="images/ganesha/small/4.jpg" alt="Ganpati Murti/Idol" title=""/>
             <div class="shot-more">
